<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vagabond.myportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular"
        android:id="@+id/popular_btn"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="20dp"
        android:shadowColor="#ffffff"
        android:background="#2E3D49"
        android:textColor="#ffffff"
        android:onClick="showToast"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock"
        android:id="@+id/stock_hawk_btn"
        android:layout_below="@+id/popular_btn"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="10dp"
        android:background="#2E3D49"
        android:textColor="#ffffff"
        android:onClick="showToast"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bigger"
        android:id="@+id/build_bigger_btn"
        android:layout_below="@+id/stock_hawk_btn"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="10dp"
        android:background="#2E3D49"
        android:textColor="#ffffff"
        android:onClick="showToast"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/material"
        android:id="@+id/make_app_btn"
        android:layout_below="@+id/build_bigger_btn"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="10dp"
        android:background="#2E3D49"
        android:textColor="#ffffff"
        android:onClick="showToast"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ubiquitous"
        android:id="@+id/ubiquitous_btn"
        android:layout_below="@+id/make_app_btn"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="10dp"
        android:background="#2E3D49"
        android:textColor="#ffffff"
        android:onClick="showToast"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/capstone_btn"
        android:layout_below="@+id/ubiquitous_btn"
        android:layout_alignLeft="@+id/ubiquitous_btn"
        android:layout_alignStart="@+id/ubiquitous_btn"
        android:layout_alignRight="@+id/ubiquitous_btn"
        android:layout_alignEnd="@+id/ubiquitous_btn"
        android:layout_marginTop="10dp"
        android:background="#2E3D49"
        android:textColor="#ffffff"
        android:onClick="showToast"/>

</RelativeLayout>
